Change "custom" to "customized"

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -3,7 +3,9 @@ title: GraphOS schema linter rules
 description: Reference
 ---
 
-This reference lists the default rules that you can enforce with [GraphOS schema linting](./schema-linter/), along with the code that GraphOS returns for each rule violation. You can also create [custom rules](#custom-rules) to forbid or require prefixes or suffixes you define on specific schema elements.
+This reference lists the default rules that you can enforce with [GraphOS schema linting](./schema-linter/), along with the code that GraphOS returns for each rule violation. You can also create [customized rules](#customized-rules) to:
+- forbid or require prefixes or suffixes you define
+- require descriptions for specific schema elements
 
 Rules are categorized by the part(s) of your schema that they correspond to.
 
@@ -534,7 +536,7 @@ You can create two kind of customized rules:
 - Rules to require or forbid specific prefixes and suffixes in element names
 - Rules to require descriptions on specific elements
 
-Refer to the schema linter page for [custom rule configuration instructions](./schema-linter#configure-custom-rules).
+Refer to the schema linter page for [customized rule configuration instructions](./schema-linter#configure-customized-rules).
 
 #### Prefix/suffix rules
 
