--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -119,7 +119,7 @@ GraphOS dynamically generates the rule name based on your selections. For exampl
 
 You can add as many rules as you want by clicking **Add another rule**. When you're done, click **Create**.
 
-Your custom rules appear with a **CUSTOM** tag in the rule list. You can edit a custom rule by clicking the pencil icon to the right of its name:
+Your customized rules appear with a **CUSTOM** tag in the rule list. You can edit a customized rule by clicking the pencil icon to the right of its name:
 
 <img
   className="screenshot"
@@ -128,7 +128,7 @@ Your custom rules appear with a **CUSTOM** tag in the rule list. You can edit a 
   width="300"
 />
 
-As with built-in linter rules, you can set a custom rule's [severity level](./schema-linter/#setting-severity-levels). To delete a rule, click the pencil icon and then click the trash can icon next to it in the custom rule modal.
+As with built-in linter rules, you can set a customized rule's [severity level](./schema-linter/#setting-severity-levels). To delete a rule, click the pencil icon and then click the trash can icon next to it in the customized rule modal.
 
 ## Running the linter
 
