--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -19,6 +19,7 @@ graph LR;
   subgraph "CI/CD"
   webClient("Web client<br/>build");
   androidClient("Android client<br/>build");
+  iosClient("iOS client<br/>build");
   end
 
   subgraph "GraphOS"
@@ -325,11 +326,12 @@ To generate an operation manifest with Apollo Kotlin, you modify your project's 
 ```kotlin
 apollo {
   service("myapi") {
+    packageName.set("com.example.myapi")
     operationManifestFormat.set("persistedQueryManifest") //highlight-line
   }
 }
 ```
-
+The manifest will be generated in `build/generated/manifest/apollo/myapi/persistedQueryManifest.json`
 ##### Apollo iOS
 
 > Manifest generation requires Apollo iOS `1.3.1` or later.
